packages/sycamore-macro/tests/view/element-fail.stderr
error: expected `=`
 --> tests/view/element-fail.rs:5:53
  |
5 |         let _: View<G> = view! { cx, button(disabled) };
  |                                                     ^

error: expected `=`
 --> tests/view/element-fail.rs:6:53
  |
6 |         let _: View<G> = view! { cx, button(on:click) };
  |                                                     ^

error: unknown directive `unknown`
 --> tests/view/element-fail.rs:7:45
  |
7 |         let _: View<G> = view! { cx, button(unknown:directive="123") };
  |                                             ^^^^^^^

error: expected `=`
  --> tests/view/element-fail.rs:10:46
   |
10 |         let _: View<G> = view! { cx, button(a.b.c="123") };
   |                                              ^

error: unexpected end of input, children and dangerously_set_inner_html cannot be both set
  --> tests/view/element-fail.rs:13:15
   |
13 |             p(dangerously_set_inner_html="<span>Test</span>") {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `unknownelement` in module `sycamore::html`
 --> tests/view/element-fail.rs:8:38
  |
8 |         let _: View<G> = view! { cx, unknownelement };
  |                                      ^^^^^^^^^^^^^^ not found in `sycamore::html`
